removing the usage of the bearer token for the api
