# docs/openapi.yaml
@@ -8,9 +8,6 @@ servers:
   - url: http://localhost:5000
   - url: https://nz-census-map-api-551034620508.europe-west2.run.app
 
-security:
-  - bearerAuth: []
-
 paths:
   /area:
     get:
@@ -112,10 +109,6 @@ paths:
           $ref: "#/components/responses/Unauthorized"
 
 components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
 
   parameters:
     CensusYearQuery:
@@ -145,12 +138,6 @@ components:
         application/json:
           schema:
             type: object
-    Unauthorized:
-      description: Missing or invalid bearer token
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Error"
     NotFound:
       description: Not found
       content:
